tests/paczka2/big_fuzzy/70566207.err
Error in line 6: sPe8CF1VDpr S735 21,2
Error in line 15: sPe8CF1VDpr A772 -2,3
Error in line 4: dWKI S708 13,3
Error in line 14: sPe8CF1VDpr A772 28,8
Error in line 20: sPe8CF1VDpr S708 92,8
Error in line 19: dWKI A575 69,3
Error in line 27: A772 S708 59,63
Error in line 35: A772 S708 2,6
Error in line 44: CA772
Error in line 46: XWA6qggCra S735 74,5
Error in line 48: XWA6qggCra A575 113,13
Error in line 40: A772 A772 35,8
Error in line 49: A772 S708 6,6
Error in line 65: FtxNGS S708 2,1
Error in line 61: bPA7CD S735 298,6
Error in line 71: bPA7CD A575 33,1
Error in line 72: bPA7CD S735 4,2
Error in line 79: bPA7CD S708 1,7
Error in line 84: bPA7CD S735 1,2
Error in line 47: XWA6qggCra A575 28,9
Error in line 93: bPA7CD A772 84,1
Error in line 114: A772HS708H401,7
Error in line 111: A772 S708 87,9
Error in line 123: bPA7CD A575 10,4
Error in line 131: dWKI S735 13,1
Error in line 126: rCClC S735 0,3
Error in line 146: XWA6qggCra S735 125,7
Error in line 162: XWA6qggCra S708 37,7
Error in line 176: sPe8CF1VDpr A772 84,7
Error in line 190: bPAwCD Sw08 48,2
Error in line 205: FtxNGS A575 73,7
Error in line 207: bPA7CD A575 71,4
Error in line 208: FtxNGS A772 38,9
Error in line 211: bPA7CD A772 99,4
Error in line 216: bPA7CD S708 -5,6
Error in line 204: sPe8CF1VDpr S735 46,4
Error in line 214: bPA7CD S708 73,9
Error in line 236: bPA7CD S735 39,6
Error in line 244: bPA7CD A77N 3N1,8
Error in line 237: sPe8CF1VDpr A772 30,6
